--- a/src/components/SkillsLogo/SkillsLogo.css
+++ b/src/components/SkillsLogo/SkillsLogo.css
@@ -7,11 +7,6 @@
   .cubespinner div {
     height: 50px;
   }
-
-  .project p {
-    margin-bottom: 300px;
-    /* font-size: 0.5rem !important; */
-  }
 }
 
 .swiper-grid {
@@ -32,7 +27,7 @@
 
 @media (max-width: 640px) {
   .cubespinner {
-    top: -90vh;
+    top: -75rem;
     left: 45vw;
   }
   .skill-bio {
