--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -69,6 +69,7 @@
   font-size: 2.1rem;
   font-weight: 700;
   text-align: center;
+  margin: 3rem 0;
 }
 
 .project p {
@@ -76,7 +77,7 @@
   font-size: 1.1rem;
   letter-spacing: 0.8px;
   line-height: 1.5em;
-  margin: 14px auto 30px auto;
+  margin: 0.9rem auto 1.8rem auto;
   text-align: center;
   width: 56%;
 }
@@ -154,7 +155,6 @@
   margin-top: 10px;
 }
 .proj-imgbx img {
-  /* height: 200px; */
   object-fit: cover;
 }
 
